2009-11-27  Ulrich Weigand  <uweigand@de.ibm.com>

	* s390-nat.c (s390_can_use_hw_breakpoint): Only support breakpoints
	of type bp_hardware_watchpoint.

2009-11-27  Joel Brobecker  <brobecker@adacore.com>

	* ada-lang.c: Apply some corrections to the previous comment addition.

2009-11-26  Joel Brobecker  <brobecker@adacore.com>

	* ada-lang.c: Update the comment explaining how to evaluate
	Ada expressions.

2009-11-24  Daniel Jacobowitz  <dan@codesourcery.com>

	PR gdb/8704

	* breakpoint.c (find_condition_and_thread): Correct task error message.
	* c-exp.y (yylex): Stop before "thread N", "task N", or abbreviations
	of those.

2009-11-24  Joel Brobecker  <brobecker@adacore.com>

	* acinclude.m4: Include ../config/zlib.m4.
	* configure.ac: Use AM_ZLIB to check for zlib support.
	* configure: Regenerate.

2009-11-24  Joel Brobecker  <brobecker@adacore.com>

	* breakpoint.c (expand_line_sal_maybe): Adjust adjust the SAL
	past the function prologue in the case where we were given only
	one SAL.

2009-11-24  Pedro Alves  <pedro@codesourcery.com>

	* record.c (init_record_ops, init_record_core_ops): Actually
	install record_stopped_data_address.

2009-11-23  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* dwarf2read.c [HAVE_MMAP] (MAP_FAILED): Define if missing.

2009-11-23  Tom Tromey  <tromey@redhat.com>

	* dwarf2read.c (find_partial_die): Don't reassign to 'back_to'.

2009-11-23  Michael Snyder  <msnyder@vmware.com>

	* NEWS: Mention hw watchpoint fix for process record.

2009-11-23  Paul Pluzhnikov  <ppluzhnikov@google.com>

	* cli/cli-cmds.c (disassemble_command): Split on comma.
	(init_cli_cmds): Update help.
	* NEWS: Mention incompatible change to 'disassemble'.
	
2009-11-22  Pedro Alves  <pedro@codesourcery.com>

        Make hardware breakpoints work for process repord.

	* record.c (record_wait): Only adjust PC on software breakpoints
	hits.

2009-11-22  Pedro Alves  <pedro@codesourcery.com>
	    Michael Snyder  <msnyder@vmware.com>
