@@ -1,3 +1,8 @@
+2009-11-28  Vladimir Prus  <vladimir@codesourcery.com>
+
+	* target.c (target_terminal_inferior): Use target_can_async_p, not
+	target_is_async_p.
+
 2009-11-27  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* s390-nat.c (s390_can_use_hw_breakpoint): Only support breakpoints
